@@ -5,4 +5,5 @@ group :development do
   gem "rdoc"
   gem "mg"
   gem 'activesupport', '>= 2.1.0'
+  gem "wrong"
 end
