@@ -6,5 +6,7 @@ rescue LoadError
   require 'rspec'
 end
 
+require "wrong/adapters/rspec"
+
 $:.unshift(File.dirname(__FILE__) + '/../lib')
 require 'annotate'
